grader does not generate error on import

--- a/etc/e11-cli/grader/Makefile
+++ b/etc/e11-cli/grader/Makefile
@@ -8,26 +8,24 @@ SES_FROM        ?= noreply@csci-e-11.org
 SSH_SECRET_ID   ?= e11/grader/ssh_private_key
 RESOLVE_S3      ?= --resolve-s3
 POETRY          ?= poetry
-SOURCE_DIR     ?= $(CURDIR)
-ARTIFACTS_DIR  ?= $(CURDIR)/.aws-sam/build/E11GraderFunction
 PKG_ROOT        ?= ..
-PY              = python3.12
-PIP             = $(PY) -m pip
 # Resolve paths from where THIS Makefile lives (robust under sam's temp SOURCE_DIR)
 MAKEFILE_DIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 PROJECT_ROOT := $(abspath $(MAKEFILE_DIR)/..)
+PY              = python3.12
+PIP             = $(PY) -m pip
+PIP_PLATFORM_OPTS := --platform manylinux2014_x86_64 --implementation cp --python-version 312 --only-binary=:all:
 
 
+
+.SHELLFLAGS := -eu -o pipefail -c
+
+export PIP_DISABLE_PIP_VERSION_CHECK=1
+export PIP_NO_INPUT=1
+export PYTHONDONTWRITEBYTECODE=1
 
 .PHONY: help print check build deploy \
         build-E11GraderFunction clean-E11GraderFunction
-
-help:
-	echo "Targets: check, build, deploy"
-
-print:
-	echo TEMPLATE=$(TEMPLATE); echo STACK=$(STACK); echo REGION=$(REGION)
-	echo DDB_TABLE_ARN=$(DDB_TABLE_ARN); echo SES_FROM=$(SES_FROM); echo SSH_SECRET_ID=$(SSH_SECRET_ID)
 
 guard-%:
 	@if [ -z "$($*)" ]; then echo "Missing required variable: $*"; exit 1; fi
@@ -50,19 +48,18 @@ deploy: check build
 	    SshSecretId="$(SSH_SECRET_ID)"
 	echo "Deployed stack: $(STACK) in $(REGION)"
 
+requirements.txt: ../pyproject.toml
+	poetry -C .. export --only main --without-hashes -o "$(MAKEFILE_DIR)/requirements.txt"
+
 # SAM build hooks for Lambda logical ID: E11GraderFunction
 build-E11GraderFunction:
-	@echo "PY=$(PY)"
-	@echo "SOURCE_DIR=$(SOURCE_DIR)"
-	@echo "PROJECT_ROOT=$(PROJECT_ROOT)"
-	@echo "ARTIFACTS_DIR=$(ARTIFACTS_DIR)"
-	mkdir -p $(ARTIFACTS_DIR)
-	poetry export  --without-hashes -o requirements.txt
-	@[ -f "$(PROJECT_ROOT)/pyproject.toml"  ] || { echo "$(PROJECT_ROOT)/pyproject.toml is missing"; exit 2; }
-	@[ -f "$(PROJECT_ROOT)/e11/__init__.py" ] || { echo "$(PROJECT_ROOT)/e11/__init__.py is missing"; exit 2; }
-	$(PIP) install -r $(SOURCE_DIR)/requirements.txt -t $(ARTIFACTS_DIR)
-	$(PIP) install $(PROJECT_ROOT) -t $(ARTIFACTS_DIR)
-	cp -f $(SOURCE_DIR)/grader.py $(ARTIFACTS_DIR)/
+	: $${ARTIFACTS_DIR:?ARTIFACTS_DIR unset}   # guard against empty var
+	rm -rf "$(ARTIFACTS_DIR)"/*
+	$(PIP) install $(PIP_PLATFORM_OPTS) -r "$(MAKEFILE_DIR)/requirements.txt" -t "$$ARTIFACTS_DIR"
+	$(PIP) install $(PIP_PLATFORM_OPTS) "$(PROJECT_ROOT)" -t "$$ARTIFACTS_DIR"
+	cp -f grader.py "$$ARTIFACTS_DIR/"
+	@[ -f "$${ARTIFACTS_DIR}/e11/__init__.py" ] || { echo "e11 missing in artifact root"; exit 3; }
+
 
 clean-E11GraderFunction:
 	rm -rf $(ARTIFACTS_DIR)/*
