--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -12,9 +12,10 @@ dependencies = [
     "boto3 (>=1.39.14,<2.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "dnspython (>=2.7.0,<3.0.0)",
-    "validate-email (>=1.3,<2.0)",
     "pytest (>=8.4.1,<9.0.0)",
-    "pytest-cov (>=6.2.1,<7.0.0)"
+    "pytest-cov (>=6.2.1,<7.0.0)",
+    "paramiko (>=4.0.0,<5.0.0)",
+    "email-validator (>=2.2.0,<3.0.0)"
 ]
 
 
