e11 changed to e11-cli in the github action

--- a/etc/e11-cli/home/Makefile
+++ b/etc/e11-cli/home/Makefile
@@ -1,11 +1,9 @@
-# ===== e11 grader Makefile =====
+# ===== e11 home Makefile =====
 TEMPLATE        ?= template.yaml
-STACK           ?= e11-grader
+STACK           ?= e11-home
 REGION          ?= us-east-1
 PROFILE         ?= fas
 DDB_TABLE_ARN   ?= arn:aws:dynamodb:$(REGION):000000000000:table/e11-grades
-SES_FROM        ?= noreply@csci-e-11.org
-SSH_SECRET_ID   ?= e11/grader/ssh_private_key
 RESOLVE_S3      ?= --resolve-s3
 POETRY          ?= poetry
 PKG_ROOT        ?= ..
@@ -25,14 +23,17 @@ export PIP_NO_INPUT=1
 export PYTHONDONTWRITEBYTECODE=1
 
 .PHONY: help print check build deploy \
-        build-E11GraderFunction clean-E11GraderFunction
+        build-E11HomeFunction clean-E11HomeFunction
 
 guard-%:
 	@if [ -z "$($*)" ]; then echo "Missing required variable: $*"; exit 1; fi
 
-check: guard-DDB_TABLE_ARN guard-SES_FROM guard-SSH_SECRET_ID
+check: guard-DDB_TABLE_ARN
 	echo "==> SAM validate"; sam validate -t $(TEMPLATE)
 	echo "==> AWS identity"; aws --profile=$(PROFILE) sts get-caller-identity >/dev/null; echo "OK"
+
+pylint:
+	poetry run pylint *.py
 
 build:
 	echo "==> sam build -t $(TEMPLATE)"; sam build -t $(TEMPLATE) --cached --parallel
@@ -43,24 +44,22 @@ deploy: check build
 	  --stack-name $(STACK) --region $(REGION) \
 	  --capabilities CAPABILITY_IAM $(RESOLVE_S3) \
 	  --parameter-overrides \
-	    DynamoTableArn="$(DDB_TABLE_ARN)" \
-	    SesFromAddress="$(SES_FROM)" \
-	    SshSecretId="$(SSH_SECRET_ID)"
+	    DynamoTableArn="$(DDB_TABLE_ARN)"
 	echo "Deployed stack: $(STACK) in $(REGION)"
 
 requirements.txt: ../pyproject.toml
 	poetry -C .. export --only main --without-hashes -o "$(MAKEFILE_DIR)/requirements.txt"
 
-# SAM build hooks for Lambda logical ID: E11GraderFunction
-build-E11GraderFunction:
+# SAM build hooks for Lambda logical ID: E11HomeFunction
+build-E11HomeFunction:
 	: $${ARTIFACTS_DIR:?ARTIFACTS_DIR unset}   # guard against empty var
 	rm -rf "$(ARTIFACTS_DIR)"/*
 	$(PIP) install $(PIP_PLATFORM_OPTS) -r "$(MAKEFILE_DIR)/requirements.txt" -t "$$ARTIFACTS_DIR"
 	$(PIP) install $(PIP_PLATFORM_OPTS) "$(PROJECT_ROOT)" -t "$$ARTIFACTS_DIR"
-	cp -f grader.py "$$ARTIFACTS_DIR/"
+	cp -f home.py "$$ARTIFACTS_DIR/"
 	cp -fr static "$$ARTIFACTS_DIR/"
 	@[ -f "$${ARTIFACTS_DIR}/e11/__init__.py" ] || { echo "e11 missing in artifact root"; exit 3; }
 
 
-clean-E11GraderFunction:
+clean-E11HomeFunction:
 	rm -rf $(ARTIFACTS_DIR)/*
