--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "GPL"}
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "boto3 (>=1.39.14,<2.0.0)",
     "requests (>=2.32.4,<3.0.0)",
@@ -15,7 +15,9 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "pytest-cov (>=6.2.1,<7.0.0)",
     "paramiko (>=4.0.0,<5.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "itsdangerous (>=2.2.0,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 
@@ -29,3 +31,6 @@ packages = [{ include="e11"}]
 
 [tool.poetry.scripts]
 e11 = "e11.__main__:main"
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.3.8"
