--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
 ruff = "*"
 ruff-lsp = "*"
 pytest = "*"
+pylint = "*"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
