--- a/etc/e11-cli/lambda-grader/samconfig.toml
+++ b/etc/e11-cli/lambda-grader/samconfig.toml
@@ -9,7 +9,7 @@ template_file = "template.yaml"
 confirm_changeset = false
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
-parameter_overrides = "DynamoTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-grades\" SesFromAddress=\"admin@csci-e-11.org\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"INFO\""
+parameter_overrides = "DynamoTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-students" SesFromAddress=\"admin@csci-e-11.org\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"INFO\""
 image_repositories = []
 code = true
 watch = true
