--- a/etc/e11-cli/lambda-s3watch/template.yaml
+++ b/etc/e11-cli/lambda-s3watch/template.yaml
@@ -107,6 +107,7 @@ Resources:
             - Sid: DynWrite
               Effect: Allow
               Action:
+                - dynamodb:GetItem
                 - dynamodb:PutItem
                 - dynamodb:DescribeTable
               Resource: !Ref DynamoTableArn
