--- a/etc/e11-cli/lambda-home/samconfig.toml
+++ b/etc/e11-cli/lambda-home/samconfig.toml
@@ -9,7 +9,7 @@ template_file = "template.yaml"
 confirm_changeset = false
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
-parameter_overrides = "DynamoTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-students\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"INFO\""
+parameter_overrides = "DynamoTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-users\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"INFO\""
 image_repositories = []
 code = true
 watch = true
