--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -1,37 +1,36 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "e11"
 version = "0.1.1"
 description = "CSCI E-11 command for managing submissions to grader and AWS infrastructure"
-authors = [
-    {name = "Simson Garfinkel",email = "simsong@acm.org"}
-]
+authors = [{name = "Simson Garfinkel", email = "simsong@acm.org"}]
 license = {text = "GPL"}
 readme = "README.md"
-requires-python = ">=3.12,<3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "boto3 (>=1.39.14,<2.0.0)",
-    "requests (>=2.32.4,<3.0.0)",
-    "dnspython (>=2.7.0,<3.0.0)",
-    "pytest (>=8.4.1,<9.0.0)",
-    "pytest-cov (>=6.2.1,<7.0.0)",
-    "paramiko (>=4.0.0,<5.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)",
-    "itsdangerous (>=2.2.0,<3.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)",
-    "jinja2 (>=3.1.6,<4.0.0)",
+    "boto3>=1.39.14,<2.0.0",
+    "requests>=2.32.4,<3.0.0",
+    "dnspython>=2.7.0,<3.0.0",
+    "pytest>=8.4.1,<9.0.0",
+    "pytest-cov>=6.2.1,<7.0.0",
+    "paramiko>=4.0.0,<5.0.0",
+    "email-validator>=2.2.0,<3.0.0",
+    "itsdangerous>=2.2.0,<3.0.0",
+    "pyjwt>=2.10.1,<3.0.0",
+    "jinja2>=3.1.6,<4.0.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pylint>=3.3.8",
+]
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-name = "e11"
-packages = [{ include="e11"}]
-
-[tool.poetry.scripts]
+[project.scripts]
 e11 = "e11.__main__:main"
 
-[tool.poetry.group.dev.dependencies]
-pylint = "^3.3.8"
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["e11*"]
