--- a/etc/e11-cli/Makefile
+++ b/etc/e11-cli/Makefile
@@ -2,9 +2,10 @@
 .PHONY: install pytest clean
 
 install:
-	python3.12 -m venv .venv
+	python3.13 -m venv .venv
 	.venv/bin/pip install pip-tools
 	.venv/bin/pip install -e .
+	.venv/bin/pip install ".[dev]"
 
 pytest: install
 	.venv/bin/pytest -q --maxfail=1 --disable-warnings --cov=e11 --cov-report=term-missing --cov-report=xml
