--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -1,11 +1,10 @@
 # ===== e11 home Makefile =====
+# lambda-home is the minimal home page. It requires no e11 packages
 STACK           ?= e11-home
 REGION          ?= us-east-1
 PROFILE         ?= fas
-RESOLVE_S3      ?= --resolve-s3
-PY              = python3.12
-PIP             = $(PY) -m pip
-PIP_PLATFORM_OPTS := --platform manylinux2014_x86_64 --implementation cp --python-version 312 --only-binary=:all:
+PY              = python3.13
+PIP_PLATFORM_OPTS := --platform manylinux2014_x86_64 --implementation cp --python-version 313 --only-binary=:all:
 
 .SHELLFLAGS := -eu -o pipefail -c
 
@@ -13,20 +12,36 @@ export PIP_DISABLE_PIP_VERSION_CHECK=1
 export PIP_NO_INPUT=1
 export PYTHONDONTWRITEBYTECODE=1
 
-pylint:
-	poetry run pylint *.py
+.PHONY: install
+install:
+	make .venv/pyvenv.cfg
 
-build: home_app/requirements.txt
+.venv/pyvenv.cfg: pyproject.toml Makefile
+	$(PY) -m venv .venv
+	.venv/bin/pip install -e .
+	.venv/bin/pip install -e ".[dev]"
+
+pytest: .venv/pyvenv.cfg
+	.venv/bin/pytest
+
+pylint: .venv/pyvenv.cfg
+	.venv/bin/pylint *.py
+
+build: src/requirements.txt
 	sam build -t template.yaml --cached --parallel
 
-deploy: pylint build
+deploy: src/requirements.txt
 	sam deploy -t template.yaml --stack-name $(STACK) --region $(REGION)
 
-home_app/requirements.txt: ../pyproject.toml Makefile
-	/bin/rm -f home_app/requirements.txt
-	../.venv/bin/pip-compile ../pyproject.toml --output-file home_app/requirements.txt
+src/requirements.txt: pyproject.toml Makefile
+	/bin/rm -f src/requirements.txt
+	.venv/bin/pip-compile pyproject.toml --output-file src/requirements.txt
 	echo "-e ../" >> home_app/requirements.txt
 
+clean:
+	/bin/rm -rf .venv
+
+#
 # SAM build hooks for Lambda logical ID: E11HomeFunction
 build-E11HomeFunction:
 	: $${ARTIFACTS_DIR:?ARTIFACTS_DIR unset}   # guard against empty var
