--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -1,37 +1,45 @@
 [project]
-name = "e11"
+name = "lambda-home"
 version = "0.1.1"
-description = "CSCI E-11 command for managing submissions to grader and AWS infrastructure"
+description = "CSCI E-11 home page"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
-license = {text = "GPL"}
+license = "GPL-3.0-or-later"
 readme = "README.md"
-requires-python = ">=3.12,<3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
-    "boto3 (>=1.39.14,<2.0.0)",
-    "requests (>=2.32.4,<3.0.0)",
-    "dnspython (>=2.7.0,<3.0.0)",
-    "pytest (>=8.4.1,<9.0.0)",
-    "pytest-cov (>=6.2.1,<7.0.0)",
-    "paramiko (>=4.0.0,<5.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)",
-    "itsdangerous (>=2.2.0,<3.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)",
-    "jinja2 (>=3.1.6,<4.0.0)",
+    "boto3",
+    "requests",
+    "dnspython",
+    "paramiko",
+    "email-validator",
+    "itsdangerous",
+    "pyjwt",
+    "jinja2",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pylint",
+    "pytest",
+    "pip-tools",
+    "pytest-cov",
+    "flask"
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=70", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry]
-name = "e11"
-packages = [{ include="e11"}]
+[tool.setuptools.package-dir]
+"" = "src"
 
-[tool.poetry.scripts]
-e11 = "e11.__main__:main"
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["home_app"]
 
-[tool.poetry.group.dev.dependencies]
-pylint = "^3.3.8"
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src", "tests"]
+addopts = "-ra -q"
