--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -50,6 +50,7 @@ Parameters:
 
 Conditions:
   CreateAcmCert: !Equals [!Ref CertificateArn, ""]
+  UseExisting: !Equals [!Ref UseExistingDomain, "true"]
 
 Resources:
   # Optional, auto-created ACM cert for the custom domain (regional, DNS validated)
@@ -76,6 +77,7 @@ Resources:
         CertificateArn: !If [CreateAcmCert, !Ref HomeCertificate, !Ref CertificateArn]
         Route53:
           HostedZoneId: !Ref HostedZoneId
+
 
   # Lambda function — JSON-only API (no Flask)
   E11HomeFunction:
@@ -140,36 +142,12 @@ Resources:
             Path: /{proxy+}
             Method: ANY
             PayloadFormatVersion: "2.0"
-#    Metadata:
-#      BuildMethod: makefile
+#        Heartbeat:
+#          Type: Schedule
+#          Properties:
+#            Schedule: rate(5 minutes)
+#            Input: '{"action":"heartbeat"}'
 
-  HeartbeatFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Runtime: python3.12
-      CodeUri: home_app
-      Handler: heartbeat.heartbeat_handler
-      Timeout: 60
-      MemorySize: 256
-      Environment:
-        Variables:
-          SESSIONS_TABLE_NAME: !Ref SessionsTable
-      Policies:
-        - Version: '2012-10-17'
-          Statement:
-            - Sid: SessionsRW
-              Effect: Allow
-              Action:
-                - dynamodb:Scan
-                - dynamodb:DeleteItem
-              Resource: !GetAtt SessionsTable.Arn
-      Events:
-        Hourly:
-          Type: Schedule
-          Properties:
-            Schedule: rate(1 hour)
-            Name: HeartbeatHourly
-            Description: Expire old sessions hourly
 
   # Sessions table holds the cookie sessions
   # It is createdd by the SAM (it's a resource)
