--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -28,6 +28,16 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: e11 home Lambda with custom domain (csci-e-11.org)
 
+Globals:
+  Function:
+    Environment:
+      Variables:
+        LOG_LEVEL: !Ref LogLevel
+        DDB_TABLE_ARN: !Ref UsersTableArn          # existing users table
+        OIDC_SECRET_ID: !Ref OidcSecretId
+        SESSIONS_TABLE_NAME: !Ref SessionsTable     # new (optional helper)
+        SESSIONS_TABLE_ARN: !GetAtt SessionsTable.Arn
+
 Parameters:
   UsersTableArn:
     Type: String
@@ -50,7 +60,7 @@ Parameters:
 
 Conditions:
   CreateAcmCert: !Equals [!Ref CertificateArn, ""]
-  UseExisting: !Equals [!Ref UseExistingDomain, "true"]
+
 
 Resources:
   # Optional, auto-created ACM cert for the custom domain (regional, DNS validated)
@@ -97,32 +107,31 @@ Resources:
       Policies:
         - Version: '2012-10-17'
           Statement:
-            - Sid: DynamoTableReadWrite
+            - Sid: UsersTableRW
               Effect: Allow
               Action:
-                - dynamodb:PutItem
-                - dynamodb:GetItem
-                - dynamodb:DeleteItem
-                - dynamodb:UpdateItem
-                - dynamodb:Query
                 - dynamodb:DescribeTable
-              Resource: !Ref UsersTableArn
-            - Sid: SessionsRW
-              Effect: Allow
-              Action:
-                - dynamodb:PutItem
                 - dynamodb:GetItem
+                - dynamodb:PutItem
                 - dynamodb:DeleteItem
                 - dynamodb:UpdateItem
                 - dynamodb:Query
                 - dynamodb:Scan
-                - dynamodb:DescribeTable
-              Resource: !GetAtt SessionsTable.Arn
-            - Sid: SessionsRWIndexes
+              Resource: !Ref UsersTableArn
+            - Sid: SessionsTableRW
               Effect: Allow
               Action:
+                - dynamodb:DescribeTable
+                - dynamodb:GetItem
+                - dynamodb:PutItem
+                - dynamodb:DeleteItem
+                - dynamodb:UpdateItem
                 - dynamodb:Query
-              Resource: !Sub "${SessionsTable.Arn}/index/*"
+                - dynamodb:Scan
+              Resource:
+                - !GetAtt SessionsTable.Arn
+                - !Sub "${SessionsTable.Arn}/index/*"
+
             - Sid: SecretsGet
               Effect: Allow
               Action: secretsmanager:GetSecretValue
@@ -153,9 +162,11 @@ Resources:
   # It is createdd by the SAM (it's a resource)
   SessionsTable:
     Type: AWS::DynamoDB::Table
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
-      TableName: !Sub "${AWS::StackName}-sessions"
       BillingMode: PAY_PER_REQUEST
+      TableName: !Sub "${AWS::StackName}-sessions"
       AttributeDefinitions:
         - AttributeName: sid
           AttributeType: S
