--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -34,6 +34,10 @@ build: src/requirements.txt
 deploy: src/requirements.txt
 	sam deploy --stack-name $(STACK) --region $(REGION)
 
+tail:
+	@echo "how can we automatically get the function name?"
+	aws logs tail "/aws/lambda/home-app-E11HomeFunction-cD6IcyqbM226"   --since 15m --follow --region us-east-1 --profile fas
+
 src/requirements.txt: pyproject.toml Makefile
 	.venv/bin/pip-compile -q pyproject.toml --output-file src/requirements.txt
 
