added AWS endpoints

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.13"]
-
+    env:
+      AWS_DEFAULT_REGION: 'localhost'
+      AWS_ENDPOINT_URL: 'http://localhost:8000'
+      AWS_ACCESS_KEY_ID: 'minioadmin'
+      AWS_SECRET_ACCESS_KEY: 'minioadmin'
     steps:
       - uses: actions/checkout@v4
 
