home.py now updates the DNS

--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -26,7 +26,7 @@ pytest: .venv/pyvenv.cfg
 	.venv/bin/python -m pytest -v --cov=. --cov-report=xml --cov-report=html --log-cli-level=DEBUG tests
 
 pylint: .venv/pyvenv.cfg
-	.venv/bin/pylint *.py
+	.venv/bin/pylint src
 
 build: src/requirements.txt
 	sam build --parallel
