--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -121,7 +121,9 @@ Resources:
                 - dynamodb:UpdateItem
                 - dynamodb:Query
                 - dynamodb:Scan
-              Resource: !Ref UsersTableArn
+              Resource:
+                - !Ref UsersTableArn
+                - !Sub "${UsersTableArn}/index/*"
 
             - Sid: SessionsTableRW
               Effect: Allow
@@ -157,8 +159,6 @@ Resources:
                 - ses:SendRawEmail
               Resource: "*"
 
-
-
       Events:
         AnyRoot:
           Type: HttpApi
@@ -174,11 +174,11 @@ Resources:
             Path: /{proxy+}
             Method: ANY
             PayloadFormatVersion: "2.0"
-#        Heartbeat:
-#          Type: Schedule
-#          Properties:
-#            Schedule: rate(5 minutes)
-#            Input: '{"action":"heartbeat"}'
+        Heartbeat:
+          Type: Schedule
+          Properties:
+            Schedule: rate(5 minutes)
+            Input: '{"action":"heartbeat"}'
 
 
   # Sessions table holds the cookie sessions
@@ -222,3 +222,6 @@ Outputs:
   HostedZoneId:
     Description: Route53 Hosted Zone
     Value: !Ref HostedZoneId
+  UsersTableIndexArn:
+    Description: ARN for Users Table Index
+    Value: !Sub "${SessionsTable.Arn}/index/*"
