--- a/etc/e11-cli/lambda-home/samconfig.toml
+++ b/etc/e11-cli/lambda-home/samconfig.toml
@@ -8,7 +8,7 @@ profile = "fas"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 disable_rollback = false
-parameter_overrides = "UsersTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-users\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"INFO\""
+parameter_overrides = "UsersTableArn=\"arn:aws:dynamodb:us-east-1:586794483136:table/e11-users\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" LogLevel=\"DEBUG\""
 image_repositories = []
 template_file = ".aws-sam/build/template.yaml"
 
