--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "pylint>=3.3.8",
     "pytest>=8.4.1,<9.0.0",
     "pytest-cov>=6.2.1,<7.0.0",
+    "flask>=3.0.0,<4.0.0",
 ]
 
 [project.scripts]
